<resources>
    <string name="app_name">Alhanpos Store</string>
    <string name="image">image</string>
    <string name="email_address">email Address</string>
    <string name="password">Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="log_in_to_nyour_account">Log In to\nYour Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product">Product</string>
    <string name="pos">Pos</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="all_sale">Sales</string>
    <string name="subscription">Subscription</string>
    <string name="stock_transfer">Stock Transfer</string>
    <string name="reports">Reports</string>
    <string name="today">Today</string>
    <string name="items">Items</string>
    <string name="more">More</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="counter">Counter</string>
    <string name="welcome_admin">Welcome Admin,</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="total_sales">Total Sales</string>
    <string name="purchase_due">Purchase Due</string>
    <string name="invoice_due">Invoice Due</string>
    <string name="total_purchase_return">Total Purchase Return</string>
    <string name="total_sell_return">Total Sell Return</string>
    <string name="expenses">Expenses</string>
    <string name="sales_last_30_days">Sales Last 30 Days</string>
    <string name="location">Location</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="checkout">Proceed To Checkout</string>
    <string name="finalize_payment">Finalize Payment</string>
    <string name="total_items">Total Items</string>
    <string name="total_payable">Total Payable</string>
    <string name="total_paying">Total Paying</string>
    <string name="change_return">Change Return</string>
    <string name="advance_balance">Advance Balance</string>
    <string name="balance">Balance</string>
    <string name="pos_payment">Pos payment</string>
    <string name="payment">Payment</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_account">Payment Account</string>
    <string name="sell_note">Sell Note</string>
    <string name="staff_note">Staff Note</string>
    <string name="all">All</string>
    <string name="total_products">Total Products</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="unit">Unit</string>
    <string name="selling_price">Selling Price</string>
    <string name="save">Save</string>
    <string name="add_category">Add Category</string>
    <string name="brand_category">Brand Category</string>
    <string name="brand_name">Brand Name</string>
    <string name="desc">Description</string>
    <string name="use_for_repair">Use for repair</string>
    <string name="categories">Categories</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="search_category">Search Category</string>
    <string name="search_brand">Search Brand</string>
    <string name="code">Code</string>
    <string name="action">Action</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="all_purchase_orders">Purchase Orders</string>
    <string name="date">Date</string>
    <string name="reference_no">Reference No</string>
    <string name="supplier">Supplier</string>
    <string name="invoice">Invoice</string>
    <string name="customer_name">Customer name</string>
    <string name="contact_number">Contact Number</string>
    <string name="subscription_no">Subscription No</string>
    <string name="order_date">Order Date</string>
    <string name="business_location">Business Location</string>
    <string name="pay_term">Pay Term</string>
    <string name="attach_document">Attach Document</string>
    <string name="add_purchase_order">Add Purchase Order</string>
    <string name="scan_for_add_product">SCAN for add product</string>
    <string name="product_information">Product Information</string>
    <string name="default_selling_price">Default Selling Price</string>
    <string name="select_type_of_service">Select Type of Service</string>
    <string name="customer">Customer</string>
    <string name="select_date">Select Date</string>
    <string name="shipping_details">Shipping Details</string>
    <string-array name="status">
        <item>Pending</item>
        <item>In Transit</item>
        <item>Completed</item>
    </string-array>
    <string name="location_from">Location (From)</string>
    <string name="location_to">Location (To)</string>
    <string name="add_stock_transfer">Add Stock Transfer</string>
    <string name="add_sale">Add Sale</string>
    <string name="payment_details">Payment Details</string>
    <string name="category_name">Category Name</string>
    <string name="add_as_sub_taxanomy">Add as sub taxanomy</string>
    <string name="category_code">Category Code</string>
    <string name="payment_note">Payment Note</string>
    <string name="add_brand">Add Brand</string>
    <string name="quantity_remaining">Quantity Remaining</string>
    <string name="shipping_status">Shipping Status</string>
    <string name="added">Added</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="total_paid">Total Paid</string>
    <string name="sell_due">Sell Due</string>
    <string name="sell_return_date">Sell Return Date</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="manage_users">Manage Users</string>
    <string name="roles">Roles</string>
    <string name="contact_id">contact ID</string>
    <string name="business_name">Business Name</string>
    <string name="tax_no">Tax No</string>
    <string name="duration">Duration</string>
    <string name="contact_type">Contact Type</string>
    <string name="mobile">Mobile</string>
    <string name="alternate_contact_number">Alt Contact No</string>
    <string name="landline">Landline</string>
    <string name="email">Email</string>
    <string name="individual">Individual</string>
    <string name="business">Business</string>
    <string name="warranty_name">Warranty Name</string>
    <string name="select_duration">Select Duration</string>
    <string name="add_warranty">Add Warranty</string>
    <string name="account">Account</string>
    <string name="acc_type">Acc Type</string>
    <string name="acc_sub_type">Acc Sub Type</string>
    <string name="acc_number">Acc Number</string>
    <string name="note">Note</string>
    <string name="expense_category">Exp Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="expense_for">Expense For</string>
    <string name="expense_for_contact">Expense for contact</string>
    <string name="applicable_tax">Applicable Tax</string>
    <string name="add_expense">Add Expense</string>
    <string name="recurring">Recurring</string>
    <string name="adjustment_type">Adjustment Type</string>
    <string name="amount_recovered">Amount Recovered</string>
    <string name="adjustment">Adjustment</string>
    <string name="start_at">Start At</string>
    <string name="ends_at">Ends At</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="other_details">Other Details</string>
    <string name="contact">Contact</string>
    <string name="stock_adjustment">Stock Adjustment</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_location">Select Location</string>
    <string name="select_product">Select Product</string>
    <string name="select_payment_account">Select Payment Account</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="quantity">Quantity</string>
    <string name="sku">SKU</string>
    <string name="product_price">Price</string>
    <string name="customer_id">Customer ID</string>
    <string name="total_due">Total Due</string>
    <string name="suppliers">Suppliers</string>
    <string name="supplier_id">Supplier ID</string>
    <string name="search_product">Search Product</string>
    <string name="total_amount_receviced">Total Amount Received</string>
    <string name="total_amount_due">Total Amount Due</string>
    <string name="add_contact">Add Contact</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="purchase_status">Purchase Status</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="additional_shipping_charges">(+) Additional Shipping Charges</string>
    <string name="total_amount_recovered">Total Amount Recovered</string>
    <string name="reason">Reason</string>
    <string name="expense_note">Expense Note</string>
    <string name="paid_on">Paid on</string>
    <string name="purchase">Purchase</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="unit_price">Unit Price</string>
    <string name="sales_last_12_months">Sales last 12 months</string>
    <string name="add_payment">Add Payment</string>
    <string name="recurring_interval">Recurring Interval</string>
    <string name="no_of_repetitions">No. of Repetitions</string>
    <string-array name="discount">
        <item>None</item>
        <item>Fixed</item>
        <item>Percentage</item>
    </string-array>
    <string name="additional_notes">Additional Notes</string>
    <string name="discount_type">Discount Type</string>
    <string-array name="purchase_tax">
        <item>None</item>
        <item>Added Tax</item>
    </string-array>
    <string-array name="orderStatuses">
        <item>Received</item>
        <item>Pending</item>
        <item>Ordered</item>
    </string-array>
    <string-array name="term">
        <item>Days</item>
        <item>Months</item>
    </string-array>
    <string-array name="expcat">
        <item>None</item>
    </string-array>
    <string-array name="adjstmntType">
        <item>Normal</item>
        <item>Abnormal</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invoice_no">Invoice No</string>
    <string name="seller">Seller</string>
    <string name="client_id">Client ID</string>
    <string name="cash">Cash</string>
    <string name="logout">Logout</string>
</resources>