<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_trending_down_24px"
        android:title="@string/reports" />
    <item
        android:id="@+id/nav_today"
        android:icon="@drawable/ic_monetization_on_24px"
        android:title="@string/today" />
    <item
        android:id="@+id/nav_pos"
        android:icon="@drawable/ic_description_24px"
        android:title="@string/pos" />
    <item
        android:id="@+id/nav_items"
        android:icon="@drawable/ic_format_list_numbered_24px"
        android:title="@string/items" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more_horiz_24px"
        android:title="@string/more" />
</menu>
