<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:weightSum="13"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/date"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/txtInvoice"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/invoice"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/txtCustName"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/customer_name"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/txtContactNo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/contact_number"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/location"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtPaymentStatus"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/payment_status"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtPaymentMethod"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/payment_method"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtTotalAmt"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/total_amount"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtTotalPaid"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/total_paid"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtSellDue"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/sell_due"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtSellReturnDate"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/sell_return_date"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtShippingStatus"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/shipping_status"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtTotalItems"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/total_items"
            android:textColor="@color/fontColor3"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>